# nvim-rpc

./: .gitignore  Cargo.toml  README.md  build.rs
genapi/: Cargo.toml
genapi/src/: error.rs  main.rs
genapi/templates/: buffer.hbs  impl.hbs  nvim.hbs  object.hbs  type.hbs
rsnvim/: Cargo.toml  README.md
rsnvim/src/: client.rs  error.rs  handler.rs  lib.rs  rpc.rs  session.rs
rsnvim/src/api/: buffer.rs  common.rs  convert.rs  mod.rs  nvim.rs  tabpage.rs  window.rs
src/: client.rs  error.rs  lib.rs  session.rs
templates/: function.hbs
