[package]
name = "rsnvim"
version = "0.1.2"
authors = ["Ronan Lawlor <ronanlawlor2001@gmail.com>"]
edition = "2021"
description = "A Rust RPC interface for Neovim"
documentation = "https://docs.rs/rsnvim"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rclawlor/rsnvim"
rust-version = "1.72.1"

[dependencies]
rmpv = "1.3.0"

